# NovaPhy

.claude/agents/: build-devops.md  collision-engineer.md  cpp-performance.md  physics-math.md  project-architect.md  testing-qa.md
.claude/skills/benchmark/: SKILL.md
.claude/skills/build-project/: SKILL.md
.claude/skills/run-linter/: SKILL.md
.claude/skills/run-memory-check/: SKILL.md
.claude/skills/run-tests/: SKILL.md
demos/: demo_ball_in_water.py  demo_dam_break.py  demo_fluid_box.py  demo_fluid_coupling.py
include/novaphy/: novaphy_types.h
include/novaphy/core/: aabb.h
include/novaphy/fluid/: boundary.h  fluid_world.h  neighbor_search.h  particle_state.h  pbf_solver.h  sph_kernel.h
include/novaphy/math/: math_types.h  math_utils.h  spatial.h
python/bindings/: CMakeLists.txt  bind_fluid.cpp  bind_main.cpp  bind_math.cpp
python/novaphy/: __init__.py
src/: CMakeLists.txt
src/fluid/: boundary.cpp  fluid_world.cpp  neighbor_search.cpp  particle_state.cpp  pbf_solver.cpp
src/math/: math_utils.cpp  spatial.cpp
tests/python/: conftest.py  test_coupling.py  test_fluid.py  test_math.py  test_pbf.py
